--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
         <link href="assets/css/style.css" rel="stylesheet">
         <title>Bryan Rammel</title>
     </head>
@@ -28,8 +29,8 @@
                 <div class="row callout" id="nav">
                     <div class="col">
                         <h2>Contact Me</h2>
-                        <p><a href="mailto:bryanrammel@gmail.com">Email: bryanrammel@gmail.com</a></p>
-                        <p><a href="https://www.linkedin.com/in/bryanrammel/" target="_blank">LinkedIn</a></p>
+                        <p><a href="mailto:bryanrammel@gmail.com"><i class="bi bi-envelope"></i></i> Email: bryanrammel@gmail.com</a></p>
+                        <p><a href="https://www.linkedin.com/in/bryanrammel/" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn Profile</a></p>
                     </div><!-- /.col -->
                 </div><!-- /.row -->
             </div><!-- /.container-fluid -->
@@ -42,37 +43,37 @@
                         <!-- Experience -->
                         <article id="mobile-experience">
                             <h3>Experience</h3>
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h4 class="card-title">Director of Marketing</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Smart for Life</h5>
-                                    <h6>Jan 2020 - Present</h6>
+                                    <h6 class="card-dates">Jan 2020 - Present</h6>
                                     <p class="card-text">In charge of overseeing the marketing department and assisting in planning, directing, coordinating, and executing marketing efforts across various channels, both online and wholesale retailers.</p>
-                                    <a href="https://www.smartforlife.com" target="_blank" class="card-link">Smartforlife.com</a>
+                                    <a class="card-text" href="https://www.smartforlife.com" target="_blank" class="card-link">Smartforlife.com</a>
                                 </div>
                             </div><!-- /.card -->
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h5 class="card-title">Founder</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">BR Consulting</h6>
-                                    <h6>Jan 2019 - Present</h6>
+                                    <h6 class="card-dates">Jan 2019 - Present</h6>
                                     <p class="card-text">Having worked at a small boutique digital marketing agency for over a year I learned tons of skills and was able to generate clients great results for the different companies marketing efforts. I quickly realized the need for quicker turn around in marketing/advertising and the need for more options in pricing so I opened my own Digital Marketing Consulting Agency where I am results based focused on getting clients a return on investment (ROI).</p>
-                                    <a href="https://brconsultingfl.com/" target="_blank" class="card-link">BRconsulting.com</a>
+                                    <a class="card-text"href="https://brconsultingfl.com/" target="_blank" class="card-link">BRconsulting.com</a>
                                 </div>
                             </div><!-- /.card -->
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h5 class="card-title">Account Executive</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Two Degrees</h6>
-                                    <h6>Aug 2019 - Dec 2019</h6>
+                                    <h6 class="card-dates">Aug 2019 - Dec 2019</h6>
                                     <p class="card-text">Using my digital marketing background and connections in the area to get new users, sign local businesses, convert trial customers into paying customers, and create a replicable process/strategy for the company to grow in new regions.</p>
                                 </div>
                             </div><!-- /.card -->
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
-                                    <h5 class="card-title">Digital Marketing Aanlyst</h5>
+                                    <h5 class="card-title">Digital Marketing Analyst</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Ten Golden Rules</h6>
-                                    <h6>July 2018 - Aug 2019</h6>
+                                    <h6 class="card-dates">July 2018 - Aug 2019</h6>
                                     <ul class="card-text">
                                         <li>Specializing in Local Business Digital Marketing</li>
                                         <li>Develop and implement core analytics reports and dashboards that measure daily marketing efforts</li>
@@ -83,11 +84,11 @@
                                     
                                 </div>
                             </div><!-- /.card -->
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h5 class="card-title">Business Strategist</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Regal Home Services</h6>
-                                    <h6>May 2018 - Jul 2018</h6>
+                                    <h6 class="card-dates">May 2018 - Jul 2018</h6>
                                     <ul class="card-text">
                                         <li>Assist with auditing 300+ employees charts assuring they are in compliance (CHAP compliant)</li>
                                         <li>Responsible for creating and running social media accounts, includes- Facebook, Instagram, and Linkedin</li>
@@ -97,8 +98,8 @@
                                     </ul>
                                     <h5 class="card-title">Intern</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Regal Home Services</h6>
-                                    <h6>Aug 2017 - May 2018</h6>
-                                    <a href="https://www.etairoshealth.com/regal-home-services/" target="_blank" class="card-link">Regal Home Services</a>
+                                    <h6 class="card-dates">Aug 2017 - May 2018</h6>
+                                    <a class="card-text" href="https://www.etairoshealth.com/regal-home-services/" target="_blank" class="card-link">Regal Home Services</a>
                                 </div>
                             </div><!-- /.card -->
                         </article>
@@ -106,19 +107,19 @@
                         <!-- Education -->
                         <article id="mobile-education">
                             <h3>Education</h3>
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h5 class="card-title">Bachelor's Degree, Business Administration and Management, Entrepeneurship</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Florida Atlantic University - College of Business</h6>
-                                    <h6>2014 - 2018</h6>
+                                    <h6 class="card-dates">2014 - 2018</h6>
                                     <p class="card-text">Activities and Societies: American Marketing Association, Visionary Owls, Owls Inc. (Entrepeneurship Club), Economics Club, Chess Club, Owl TV, and Owl Radio</p>
                                 </div>
                             </div><!-- /.card -->
-                            <div class="card">
+                            <div class="card" data-aos="fade-up">
                                 <div class="card-body">
                                     <h5 class="card-title">High School Diploma, Business</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">BR Consulting</h6>
-                                    <h6>2010 - 2014</h6>
+                                    <h6 class="card-dates">2010 - 2014</h6>
                                     <p class="card-text">Activities and Societies: FBLA, DECA, FCA, National Honor Society, Spanish Club</p>
                                 </div>
                             </div><!-- /.card -->
