--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-        <link href="assets/css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="assets/arrows.css">
+        <link rel="stylesheet"href="assets/css/style.css">
         <title>Bryan Rammel</title>
     </head>
     <body>
@@ -133,26 +134,24 @@
         </section>
         
         <!-- Desktop = >767px -->
-        <section id="desktop">
+        <section class="bg-blue" id="desktop">
             <div class="container-fluid">
                 <div class="row row-full-height" id="desktop-01">
-                    <div class="topWireframeText">Initial View</div>
                     <div class="col" data-aos="fade-up">
-                        <h2 style="margin-top:350px;">About Me</h2>
+                        <img class="rounded-circle" src="assets/img/bryan.jpg">
+                        <h2>About Me</h2>
                     </div>
                 </div>
             </div>
             <div class="row row-full-height" id="desktop-02">
-                <div class="topWireframeText">First Scroll View</div>
                 <div class="col">
-                    <h2 style="margin-top:100px;">About Me</h2>
                     <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="500"><h3>I'm Bryan Rammel</h3></div>
                     <div data-aos="fade-up-left" data-aos-delay="1000" data-aos-duration="500"><h4>Marketer &amp; Entrepeneur</h4></div>
                     <div data-aos="fade-up" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\social-media-marketing.png" style="display:block;width:50%;height:auto;max-width:400px;margin:auto;"></div>
+                    <div class="arrows"></div>
                 </div>
             </div>
             <div class="row row-full-height" id="desktop-02">
-                <div class="topWireframeText" style="margin-bottom: 100px;">More Scrolling View</div>
                 <div class="col">
                     <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="500"><h3 style="margin-top:200px;">In 2014, I graduated from FAU's College of Business</h3></div>
                     <div data-aos="fade-up-left" data-aos-delay="1000" data-aos-duration="500"><h4>Bachelor's Degree, Business Administration and Management, Entrepeneurship</h4></div>
@@ -162,7 +161,6 @@
                 </div>
             </div>
             <div class="row row-full-height" id="desktop-03">
-                <div class="topWireframeText" style="margin-bottom: 100px;">Even More Scrolling View</div>
                 <div class="col">
                     <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="500"><h3 style="margin-top:200px;">My skills insclude</h3></div>
                 </div>
@@ -182,12 +180,11 @@
                 </div>
             </div>
             <div class="row" id="desktop-04">
-                <div class="topWireframeText" style="margin-bottom: 100px;">And Some Even More Scrolling View</div>
                 <div class="col">
                     <div data-aos="fade-down" data-aos-duration="500"><h3 style="margin-top:50px;">I've worked for these companies</h3>
                 </div>
             </div>
-            <div class="row" style="margin-top:200px;">
+            <div class="row bg-white" id="logos-banner" data-aos="fade-left" style="margin-top:200px;">
                 <div class="col">
                     <div data-aos="flip-up" data-aos-delay="500" data-aos-duration="500">
                         <img class="work-logos" src="assets\img\sfl.png">
@@ -220,7 +217,6 @@
                 </div>
             </div><!-- /.row -->
             <div class="row row-full-height" id="desktop-05">
-                <div class="topWireframeText" style="margin-bottom: 100px;">I Can't Scroll Anymore View</div>
                 <div class="col" style="height:600px;">
                     <img src="assets\img\bryan.jpg" style="display:block;width:50%;height:auto;max-width:400px;margin-top:100px;margin-left: auto;margin-right: auto;">
                 </div>
