--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="assets/arrows.css">
-        <link rel="stylesheet"href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/arrow.css">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Bryan Rammel</title>
     </head>
     <body>
@@ -149,7 +149,7 @@
                         <div class="col">
                             <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="500"><h3>I'm Bryan Rammel</h3></div>
                             <div data-aos="fade-up-left" data-aos-delay="1000" data-aos-duration="500"><h4>Marketer &amp; Entrepeneur</h4></div>
-                            <div data-aos="fade-up" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\social-media-marketing.png" style="display:block;width:50%;height:auto;max-width:400px;margin:auto;"></div>
+                            <div data-aos="fade-up" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\social-media-marketing.png" class="intro-img"></div>
                             <div class="arrows"></div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
@@ -159,7 +159,7 @@
                             <div data-aos="fade-up-left" data-aos-delay="1000" data-aos-duration="500"><h4>Bachelor's Degree, Business Administration and Management, Entrepeneurship</h4></div>
                         </div><!-- /.col -->
                         <div class="col">
-                            <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\college-degree.png" style="display:block;width:50%;height:auto;max-width:400px;margin:auto;"></div>
+                            <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\college-degree.png" class="intro-img"></div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
                 </article>
@@ -168,20 +168,20 @@
                 <article id="skills">
                     <div class="row">
                         <div class="col">
-                            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="500"><h3 style="margin-top:200px;">My skills include</h3></div>
+                            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="500"><h3>My skills include</h3></div>
                         </div><!-- /.col -->
                         <div class="col">
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-delay="500" data-aos-duration="500"><h4>Marketing</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="1000" data-aos-duration="500"><img src="assets\img\digital-marketing.png" style="display:block;width:50%;height:auto;max-width:200px;margin:auto;"></div>
+                                <div data-aos="flip-right" data-aos-delay="1000" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
                             </div>
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="2000" data-aos-duration="500"><img src="assets\img\entrepeneur.png" style="display:block;width:50%;height:auto;max-width:200px;margin:auto;"></div>
+                                <div data-aos="flip-right" data-aos-delay="2000" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
                             </div>
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-delay="2500" data-aos-duration="500"><h4>Sales</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="3000" data-aos-duration="500"><img src="assets\img\handshake.png" style="display:block;width:50%;height:auto;max-width:200px;margin:auto;"></div>
+                                <div data-aos="flip-right" data-aos-delay="3000" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
                             </div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
@@ -194,7 +194,7 @@
                             <div data-aos="fade-down" data-aos-duration="500"><h3 style="margin-top:50px;">I've worked for these companies</h3>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
-                    <div class="row bg-white" id="logos-banner" data-aos="fade-left" style="margin-top:200px;">
+                    <div class="row bg-white" id="logos-banner" data-aos="fade-left">
                         <div class="col">
                             <div data-aos="flip-up" data-aos-delay="500" data-aos-duration="500">
                                 <img class="work-logos" src="assets\img\sfl.png">
@@ -232,7 +232,7 @@
                 <article id="contact">
                     <div class="row">
                         <div class="col">
-                            <img src="assets\img\bryan.jpg" style="display:block;width:50%;height:auto;max-width:400px;margin-top:100px;margin-left: auto;margin-right: auto;">
+                            <img src="assets\img\bryan.jpg">
                         </div><!-- /.col -->
                         <div class="col">
                             <h3 style="margin-top:200px;">To Stay Connected:</h3>
