Image and Skills Updates.

--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
                             <div class="arrows"></div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
+                </article>
+
+                <!-- Education -->
+                <article id="education">
                     <div class="row">
-                        <div class="col">
-                            <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="500"><h3 style="margin-top:200px;">In 2014, I graduated from FAU's College of Business</h3></div>
+                        <div class="col-sm-6">
+                            <div data-aos="fade-up-right" data-aos-delay="500" data-aos-duration="500"><h3>In 2014, I graduated from FAU's College of Business</h3></div>
                             <div data-aos="fade-up-left" data-aos-delay="1000" data-aos-duration="500"><h4>Bachelor's Degree, Business Administration and Management, Entrepeneurship</h4></div>
                         </div><!-- /.col -->
-                        <div class="col">
-                            <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="3000"><img src="assets\img\college-degree.png" class="intro-img"></div>
+                        <div class="col-sm-6">
+                            <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="3000">
+                                <img src="assets\img\fau-owl.png" class="intro-img">
+                            </div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
                 </article>
@@ -47,20 +53,24 @@
                 <article id="skills">
                     <div class="row">
                         <div class="col">
-                            <div data-aos="fade-down" data-aos-delay="500" data-aos-duration="500"><h3>My skills include</h3></div>
+                            <div data-aos="fade-down"  data-aos-duration="500"><h3>My skills include</h3></div>
                         </div><!-- /.col -->
                         <div class="col">
                             <div class="skill">
-                                <div data-aos="fade-left" data-aos-delay="500" data-aos-duration="500"><h4>Marketing</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="1000" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
+                                <div data-aos="fade-left" data-aos-duration="500"><h4>Marketing</h4></div>
+                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
                             </div>
                             <div class="skill">
-                                <div data-aos="fade-left" data-aos-delay="1500" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="2000" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
+                                <div data-aos="fade-left" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
+                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
                             </div>
                             <div class="skill">
-                                <div data-aos="fade-left" data-aos-delay="2500" data-aos-duration="500"><h4>Sales</h4></div>
-                                <div data-aos="flip-right" data-aos-delay="3000" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
+                                <div data-aos="fade-left" data-aos-duration="500"><h4>Sales</h4></div>
+                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
+                            </div>
+                            <div class="skill">
+                                <div data-aos="fade-left" data-aos-duration="500"><h4>Communication</h4></div>
+                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\iphone.png" class="skills-img"></div>
                             </div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
