--- a/index.html
+++ b/index.html
@@ -55,19 +55,27 @@
                         <div class="col">
                             <div data-aos="fade-down"  data-aos-duration="500"><h3>My skills include</h3></div>
                         </div><!-- /.col -->
+                    </div><!-- /.row -->
+                    <div class="row">
                         <div class="col">
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-duration="500"><h4>Marketing</h4></div>
                                 <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
                             </div>
+                        </div><!-- /.row -->
+                        <div class="row"></div>
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
                                 <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
                             </div>
+                        </div><!-- /.row -->
+                        <div class="row"></div>
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-duration="500"><h4>Sales</h4></div>
                                 <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
                             </div>
+                        </div><!-- /.row -->
+                        <div class="row"></div>
                             <div class="skill">
                                 <div data-aos="fade-left" data-aos-duration="500"><h4>Communication</h4></div>
                                 <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\iphone.png" class="skills-img"></div>
