--- a/index.html
+++ b/index.html
@@ -56,32 +56,134 @@
                             <div data-aos="fade-down"  data-aos-duration="500"><h3>My skills include</h3></div>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
+
+                    <!-- Marketing -->
                     <div class="row">
-                        <div class="col">
-                            <div class="skill">
-                                <div data-aos="fade-left" data-aos-duration="500"><h4>Marketing</h4></div>
-                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
-                            </div>
-                        </div><!-- /.row -->
-                        <div class="row"></div>
-                            <div class="skill">
-                                <div data-aos="fade-left" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
-                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
-                            </div>
-                        </div><!-- /.row -->
-                        <div class="row"></div>
-                            <div class="skill">
-                                <div data-aos="fade-left" data-aos-duration="500"><h4>Sales</h4></div>
-                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
-                            </div>
-                        </div><!-- /.row -->
-                        <div class="row"></div>
-                            <div class="skill">
-                                <div data-aos="fade-left" data-aos-duration="500"><h4>Communication</h4></div>
-                                <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\iphone.png" class="skills-img"></div>
-                            </div>
+                        <div class="col-xs-12 skill" id="skill-marketing-default">
+                            <div data-aos="fade-left" data-aos-duration="500"><h4>Marketing</h4></div>
+                            <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\digital-marketing.png" class="skills-img"></div>
+                            <h5 class="pointer" id="skill-marketing-more">More About Marketing...</h5>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
+                    <section class="skill-detail" id="skill-marketing-detail">
+                        <div class="row">
+                            <div class="col-xs-12 skill-marketing-detail" id="skill-marketing-detail-title">
+                                <h4>Marketing</h4>
+                            </div>
+                            <div class="col-md-6 skill-marketing-detail" id="skill-marketing-detail-img">
+                                <img src="assets\img\digital-marketing.png" class="skills-img">
+                            </div>
+                            <div class="col-md-6 skill-marketing-detail" id="skill-marketing-detail-text">
+                                <p>A passion for finding what works for businesses marketing efforts. I have helped clients increase return on investment (ROI) on marketing dollars and saved them time search through all the none sense through the web. Expierience, knowledge, and resourcefulness, 3 things I provide for all of my clients.</p>
+                            </div><!-- /.col -->
+                            <div class="col-xs-12 skill-marketing-detail" id="skill-marketing-detail-text">
+                                <h5 class="pointer" id="skill-marketing-less">Less About Marketing...</h5>
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
+                    </section>
+
+                    <!-- Entrepeneurship -->
+                    <div class="row">
+                        <div class="col-xs-12 skill" id="skill-entrepeneurship-default">
+                            <div data-aos="fade-left" data-aos-duration="500"><h4>Entrepeneurship</h4></div>
+                            <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\entrepeneur.png" class="skills-img"></div>
+                            <h5 class="pointer" id="skill-entrepeneurship-more">More About Entrepeneurship...</h5>
+                        </div>
+                    </div><!-- /.row -->
+                    <section class="skill-detail" id="skill-entrepeneurship-detail">
+                        <div class="row">
+                            <div class="col-xs-12 skill-entrepeneurship-detail" id="skill-entrepeneurship-detail-title">
+                                <h4>Entrepeneurship</h4>
+                            </div>
+                            <div class="col-md-6 skill-entrepeneurship-detail" id="skill-entrepeneurship-detail-img">
+                                <img src="assets\img\entrepeneur.png" class="skills-img">
+                            </div>
+                            <div class="col-md-6 skill-entrepeneurship-detail" id="skill-entrepeneurship-detail-text">
+                                <p>With great opportunity comes great risk. Lucky for me i have never been someone to run or be scared of risk. Entrepeneurship is a risk like no other, having resposnibilities for clients, employees, and deadlines, it can be more risk than someone could be looking to take on. I have a can do mindset and the ability to "figure it out" if something doesn't work, we pivot.</p>
+                            </div><!-- /.col -->
+                            <div class="col-xs-12 skill-entrepeneurship-detail" id="skill-entrepeneurship-detail-text">
+                                <h5 class="pointer" id="skill-entrepeneurship-less">Less About Entrepeneurship...</h5>
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
+                    </section>
+
+                    <!-- Sales -->
+                    <div class="row">
+                        <div class="col-xs-12 skill" id="skill-sales-default">
+                            <div data-aos="fade-left" data-aos-duration="500"><h4>Sales</h4></div>
+                            <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\handshake.png" class="skills-img"></div>
+                            <h5 class="pointer" id="skill-sales-more">More About Sales...</h5>
+                        </div>
+                    </div><!-- /.row -->
+                    <section class="skill-detail" id="skill-sales-detail">
+                        <div class="row">
+                            <div class="col-xs-12 skill-sales-detail" id="skill-sales-detail-title">
+                                <h4>Sales</h4>
+                            </div>
+                            <div class="col-md-6 skill-sales-detail" id="skill-sales-detail-img">
+                                <img src="assets\img\handshake.png" class="skills-img">
+                            </div>
+                            <div class="col-md-6 skill-sales-detail" id="skill-sales-detail-text">
+                                <p>Sales have always come naturally to me and work hand in hand with marketing. Having the skills to sell a company's goods and services to third parties allows me properly show value in the work I do. Which tie further together with my next skill...</p>
+                            </div><!-- /.col -->
+                            <div class="col-xs-12 skill-sales-detail" id="skill-sales-detail-text">
+                                <h5 class="pointer" id="skill-sales-less">Less About Sales...</h5>
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
+                    </section>
+
+                    <!-- Communication -->
+                    <div class="row">
+                        <div class="col-xs-12 skill" id="skill-communication-default">
+                            <div data-aos="fade-left" data-aos-duration="500"><h4>Communication</h4></div>
+                            <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\iphone.png" class="skills-img"></div>
+                            <h5 class="pointer" id="skill-communication-more">More About Communication...</h5>
+                        </div><!-- /.col -->
+                    </div><!-- /.row -->
+                    <section class="skill-detail" id="skill-communication-detail">
+                        <div class="row">
+                            <div class="col-xs-12 skill-communication-detail" id="skill-communication-detail-title">
+                                <h4>Communication</h4>
+                            </div>
+                            <div class="col-md-6 skill-communication-detail" id="skill-communication-detail-img">
+                                <img src="assets\img\iphone.png" class="skills-img">
+                            </div>
+                            <div class="col-md-6 skill-communication-detail" id="skill-communication-detail-text">
+                                <p>In order to be a good marketer you have to be a good communicator. I am a straightforward proacvtive communicator which helps me to get projects done and explain the task at hand to my team. Lack of communication can lead to missed deadlines, bad reviews, and more. </p>
+                            </div><!-- /.col -->
+                            <div class="col-xs-12 skill-communication-detail" id="skill-communication-detail-text">
+                                <h5 class="pointer" id="skill-communication-less">Less About Communication...</h5>
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
+                    </section>
+
+                    <!-- Leadership -->
+                    <div class="row">
+                        <div class="col-xs-12 skill" id="skill-leadership-default">
+                            <div data-aos="fade-left" data-aos-duration="500"><h4>Leadership</h4></div>
+                            <div data-aos="flip-right" data-aos-duration="500"><img src="assets\img\desktop.png" class="skills-img"></div>
+                            <h5 class="pointer" id="skill-leadership-more">More About Leadership...</h5>
+                        </div><!-- /.col -->
+                    </div><!-- /.row -->
+                    <section class="skill-detail" id="skill-leadership-detail">
+                        <div class="row">
+                            <div class="col-xs-12 skill-leadership-detail" id="skill-leadership-detail-title">
+                                <h4>Leadership</h4>
+                            </div>
+                            <div class="col-md-6 skill-leadership-detail" id="skill-leadership-detail-img">
+                                <img src="assets\img\desktop.png" class="skills-img">
+                            </div>
+                            <div class="col-md-6 skill-leadership-detail" id="skill-leadership-detail-text">
+                                <p>When you think of a leader you think of someone who the ability to give direction, have a plan, and above all the ability to be a leader and a follower. Since I was a kid I have never shyed away from leading the pack and as i have gotten older developed the abilty to take a step back read a room adn deliver a more conclusive plan. A sign of a good leader is to be able to listen and take critisim. </p>
+                            </div><!-- /.col -->
+                            <div class="col-xs-12 skill-leadership-detail" id="skill-leadership-detail-text">
+                                <h5 class="pointer" id="skill-leadership-less">Less About Leadership...</h5>
+                            </div><!-- /.col -->
+                        </div><!-- /.row -->
+                    </section>
+
+
+
                 </article>
                 
                 <!-- Experience -->
